# AlgebraLib

./: .gitattributes  CMakeLists.txt  SparseAlgebra.cpp  SparseAlgebra.hpp  SparseMatrix.cpp  SparseMatrix.hpp  SparseParallelAlgebra.cpp  SparseParallelAlgebra.hpp  SparseVector.cpp  SparseVector.hpp  main.cpp
docs/: AlgebraLib_8hpp.html  AlgebraLib_8hpp__dep__incl.map  AlgebraLib_8hpp__dep__incl.md5  AlgebraLib_8hpp__incl.map  AlgebraLib_8hpp__incl.md5  AlgebraLib_8hpp_source.html  FullAlgebra_8cpp.html  FullAlgebra_8cpp__incl.map  FullAlgebra_8cpp__incl.md5  FullAlgebra_8cpp_source.html  FullAlgebra_8hpp.html  FullAlgebra_8hpp__dep__incl.map  FullAlgebra_8hpp__dep__incl.md5  FullAlgebra_8hpp__incl.map  FullAlgebra_8hpp__incl.md5  FullAlgebra_8hpp_source.html  Globals_8hpp.html  Globals_8hpp__dep__incl.map  Globals_8hpp__dep__incl.md5  Globals_8hpp__incl.map  Globals_8hpp__incl.md5  Globals_8hpp_source.html  Matrix_8cpp.html  Matrix_8cpp__incl.map  Matrix_8cpp__incl.md5  Matrix_8cpp_source.html  Matrix_8hpp.html  Matrix_8hpp__dep__incl.map  Matrix_8hpp__dep__incl.md5  Matrix_8hpp__incl.map  Matrix_8hpp__incl.md5  Matrix_8hpp_source.html  SparseAlgebra_8cpp.html  SparseAlgebra_8cpp__incl.map  SparseAlgebra_8cpp__incl.md5  SparseAlgebra_8cpp_source.html  SparseAlgebra_8hpp.html  SparseAlgebra_8hpp__dep__incl.map  SparseAlgebra_8hpp__dep__incl.md5  SparseAlgebra_8hpp__incl.map  (+93 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  namespaces_0.js  pages_0.js  related_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  (+3 more)
doxygen/: GitHubPageConfiguration  custom_css.css  custom_footer.html
src/AlgebraLib/: AlgebraLib.hpp  FullAlgebra.cpp  FullAlgebra.hpp  Globals.hpp  Matrix.cpp  Matrix.hpp  SparseAlgebra.cpp  SparseAlgebra.hpp  SparseMatrix.cpp  SparseMatrix.hpp  SparseParallelAlgebra.cpp  SparseVector.cpp  SparseVector.hpp  Vector.cpp  Vector.hpp
src/algebra_lib/: algebra_lib.hpp  full_algebra.cpp  full_algebra.hpp  globals.hpp  matrix.cpp  matrix.hpp  sparse_algebra.cpp  sparse_algebra.hpp  sparse_matrix.cpp  sparse_matrix.hpp  sparse_parallel_algebra.cpp  sparse_parallel_algebra.hpp  sparse_vector.cpp  sparse_vector.hpp  vector.cpp  vector.hpp
